--- a/resq_backend/.gitignore
+++ b/resq_backend/.gitignore
@@ -14,16 +14,12 @@ node_modules/
 dist/
 dist-ssr/
 
-# Local environment files
+# Local env files
 *.local
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.env
 
 # Editor directories and files
-.vscode/*
+.vscode/
 !.vscode/extensions.json
 .idea/
 .DS_Store
@@ -32,6 +28,3 @@ dist-ssr/
 *.njsproj
 *.sln
 *.sw?
-
-# Ignore backend (Django) project
-
