--- a/resq_backend/FRONT_END/.gitignore
+++ b/resq_backend/FRONT_END/.gitignore
@@ -7,31 +7,18 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-# Dependency directories
-node_modules/
-
-# Build output
-dist/
-dist-ssr/
-
-# Local environment files
+node_modules
+dist
+dist-ssr
 *.local
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea/
+.idea
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-
-# Ignore backend (Django) project
-
