--- a/FRONT_END/.gitignore
+++ b/FRONT_END/.gitignore
@@ -14,12 +14,16 @@ node_modules/
 dist/
 dist-ssr/
 
-# Local env files
+# Local environment files
 *.local
-*.env
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Editor directories and files
-.vscode/
+.vscode/*
 !.vscode/extensions.json
 .idea/
 .DS_Store
@@ -28,3 +32,6 @@ dist-ssr/
 *.njsproj
 *.sln
 *.sw?
+
+# Ignore backend (Django) project
+
